# lightchatd

./: .gitignore  CMakeLists.txt  README.md  asdf.txt  config.md  protocol.md
src/: CMakeLists.txt  buffer.c  buffer.cpp  buffer.h  buffer.hpp  channel.cpp  channel.hpp  connection.hpp  event.hpp  input-buffer.hpp  listener.cpp  message.hpp  notifier.cpp  notifier.hpp  poller.cpp  poller.hpp  socket.c  socket.cpp  socket.h  socket.hpp  user.hpp
src/client-msg-handling/: CMakeLists.txt  databuf.cpp  databuf.hpp  msgqueue.hpp
src/in-progress-testing/: connection.cpp  event.hpp  listener.cpp  listener.hpp
src/listener/: CMakeLists.txt  listener.cpp  listener.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/parser/tests/: TEST-parser.cpp
src/sockwriter/: CMakeLists.txt  databuf.cpp  databuf.hpp  msgqueue.cpp  msgqueue.hpp  msgsender.cpp  msgsender.hpp
src/tests/: CMakeLists.txt  connection.cpp  relassert.hpp  sockfuncs.cpp  sockfuncs.hpp  test-buffer.c  test-buffer.cpp  test-buffer.h  test-sockfuncs.cpp
src/worker-threads/: users-db.cpp  users-db.hpp
